[project]
name = "cistell"
dynamic = ["version"]
description = "Configuration library with field provenance and secret support"
authors = [{ name = "Luis Diaz", email = "code.luis.diaz@proton.me" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["config", "configuration", "environment", "settings"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://cistell.pynenc.org"
Repository = "https://github.com/pynenc/cistell"
Documentation = "https://docs.cistell.pynenc.org"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.7.4"]

[tool.maturin]
manifest-path = "crates/cistell-py/Cargo.toml"
module-name = "cistell._internal"
bindings = "pyo3"
include = [
    { path = "README.md", format = "sdist" },
    { path = "python/cistell/py.typed", format = "sdist" },
]
features = ["pyo3/extension-module"]

[tool.uv]
managed = true
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.9",
    "maturin>=1.7.4",
    "mypy>=1.13.0",
    "pyyaml>=6.0.3",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinxcontrib-mermaid>=0.9",
    "myst-parser>=2",
    "furo>=2023",
    "sphinx-autodoc2>=0.5",
]

[tool.mypy]
files = ["cistell"]
strict = true
python_version = "3.12"
enable_error_code = [
  "redundant-expr",
  "truthy-bool",
  "ignore-without-code",
]
follow_imports = "silent"
disallow_untyped_defs = true
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
preview = true
fix = true
target-version = "py312"

[tool.ruff.lint]
select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D",    # flake8-docstrings
  "E",    # pycodestyle
  "EM",   # flake8-errmsg
  "F",    # pyflakes
  "FA",   # flake8-future-annotations
  "I",    # isort
  "PERF", # perflint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "UP",   # pyupgrade
  "W",    # pycodestyle
]
ignore = [
    "D203",   # one-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "ANN101", # missing type annotation for self
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.format]
preview = true

[tool.coverage.report]
fail_under = 85
skip_covered = true
show_missing = true

[tool.coverage.run]
branch = true
source = ["cistell"]
