[package]
name = "cistell-core"
description = "Configuration library with field provenance and secret support — core engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["toml"]
toml    = ["dep:toml"]
yaml    = ["dep:serde_yaml"]
json    = ["dep:serde_json"]
serde   = ["dep:serde"]
zeroize = ["dep:zeroize"]
tracing = ["dep:tracing"]

[dependencies]
cistell-macros = { workspace = true }
indexmap   = { workspace = true }
thiserror = { workspace = true }

# Optional — versions pinned to match rustvello workspace
toml       = { workspace = true, optional = true }
serde_yaml = { optional = true, version = "0.9" }
serde_json = { optional = true, version = "1" }
serde      = { workspace = true, optional = true }
zeroize    = { workspace = true, optional = true }
tracing    = { workspace = true, optional = true }

[dev-dependencies]
temp-env   = "0.3"
tempfile   = "3"
trybuild   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
